[gd_scene load_steps=2 format=3 uid="uid://capv1tkqxflob"]

[ext_resource type="Script" uid="uid://otu2ea3koshi" path="res://Auth/login.gd" id="1_6uxbt"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6uxbt")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -25.0
offset_right = 40.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tittle" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 58
text = "TDVS
"

[node name="Panel" type="Panel" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Mensaje" type="Label" parent="Panel/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 1, 0, 1)
theme_override_constants/outline_size = 6

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Username
"

[node name="UsernameInput" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Password"

[node name="PasswordInput" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
secret = true

[node name="LoginButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Login"

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label3" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "No account?"

[node name="SignUpButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Sign Up"

[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="pressed" from="Panel/VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SignUpButton" to="." method="_on_sign_up_button_pressed"]
